--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".UI.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InsertActivity" />
-        <activity android:name=".InfoActivity"></activity>
+        <activity android:name=".UI.InsertCollectionActivity" />
+        <activity android:name=".UI.InfoActivity" />
+        <activity android:name=".UI.MainSettingsActivity"></activity>
     </application>
 
 </manifest>
