--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "eu.indiewalkabout.cleantheworld"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
