--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,11 @@ dependencies {
     // implementation "android.arch.lifecycle:viewmodel:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
+    // Ads through  Playservices : it gives me problem....
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
+    // GDPR
+    implementation 'com.google.android.ads.consent:consent-library:1.0.6'
 
     // test stuff
     testImplementation 'junit:junit:4.12'
